capi/md_capi.h

/* ==================== 错误模型 ==================== */

typedef enum MD_STATUS {
    MD_OK = 0,
    MD_ERR_NULL_POINTER,        /* 入参为空 */
    MD_ERR_INVALID_ARGUMENT,    /* 参数不合法（路径为空/尺寸非法等） */
    MD_ERR_PATH_NOT_FOUND,      /* 模型/文件不存在 */
    MD_ERR_MODEL_LOAD,          /* 模型加载失败（含后端初始化失败） */
    MD_ERR_MODEL_PREDICT,       /* 推理失败 */
    MD_ERR_MODEL_INIT,          /* 模型初始化失败（is_initialized()==false） */
    MD_ERR_UNSUPPORTED_TYPE,    /* 模型类型不支持 */
    MD_ERR_UNSUPPORTED_BACKEND, /* 后端不可用 */
    MD_ERR_OUT_OF_MEMORY,       /* 内存分配失败 */
    MD_ERR_IMAGE_DECODE,        /* 图像解码失败 */
    MD_ERR_BUSY,                /* 句柄并发使用（检测到非单线程） */
    MD_ERR_NOT_IMPLEMENTED,     /* 功能未实现 */
    MD_ERR_AUDIO_DECODE,        /* 音频解码失败 */
    MD_ERR_INVALID_TYPE         /* 参数类型不匹配 */
} MDStatus;
typedef struct md_image_handle* MDImageHandle;
typedef struct md_result_handle* MDResultHandle;
typedef struct MDPoint { float x, y; } MDPoint;
typedef struct MDPoint3 { float x, y, z; } MDPoint3;
typedef struct MDColorRGBA { unsigned char r, g, b, a; } MDColorRGBA;
/* ==================== 结果项结构（blittable：纯数值、无指针，C# 可直映） ==================== */

typedef struct MDDetectionItem {
    float x, y, w, h;
    float score;
    int label_id;
} MDDetectionItem;
typedef struct MDClassifyItem {
    int label_id;
    float score;
} MDClassifyItem;
typedef struct MDPoseItem {
    float x, y, w, h;
    float score;
} MDPoseItem;
typedef struct MDObbItem {
    float cx, cy, w, h, angle;
    float score;
    int label_id;
} MDObbItem;
typedef struct MDIsegItem {
    float x, y, w, h;
    float score;
    int label_id;
} MDIsegItem;
typedef struct MDLprItem {
    float x, y, w, h;
    float score;
} MDLprItem;
typedef struct MDAttrItem {
    float x, y, w, h;
    float box_score;
    int box_label_id;
} MDAttrItem;
typedef struct MDFaceItem {
    float x, y, w, h;
    float score;
} MDFaceItem;
typedef struct MDInsightFaceItem {
    float x, y, w, h;
    float score;
    int gender;
    int age;
} MDInsightFaceItem;
/* ==================== 结果 getter（数组式：一次取回，内存归结果句柄所有） ==================== */

/* Detection */
MD_CAPI_EXPORT MDStatus md_result_detection(MDResultHandle, const MDDetectionItem** items, size_t* count);
/* Classification */
MD_CAPI_EXPORT MDStatus md_result_classification(MDResultHandle, const MDClassifyItem** items, size_t* count);
/* Pose（bbox + score 在数组项；骨架关键点在 md_result_keypoints） */
MD_CAPI_EXPORT MDStatus md_result_pose(MDResultHandle, const MDPoseItem** items, size_t* count);
MD_CAPI_EXPORT MDStatus md_result_keypoints(MDResultHandle, size_t i, const MDPoint3** kps, size_t* n);
/* OBB */
MD_CAPI_EXPORT MDStatus md_result_obb(MDResultHandle, const MDObbItem** items, size_t* count);
/* InstanceSeg（mask 单列） */
MD_CAPI_EXPORT MDStatus md_result_instance_seg(MDResultHandle, const MDIsegItem** items, size_t* count);
MD_CAPI_EXPORT MDStatus md_result_mask(MDResultHandle, size_t i, const unsigned char** buf, size_t* out_h, size_t* out_w);
/* SemSeg / Depth（整图单值；批量句柄下读 index 0） */
MD_CAPI_EXPORT MDStatus md_result_sem_seg(MDResultHandle, const unsigned char** labels, size_t* h, size_t* w,
                           int* num_classes);
MD_CAPI_EXPORT MDStatus md_result_depth(MDResultHandle, const float** depth, size_t* h, size_t* w);
/* 批量：按图索引取每图标签/深度 */
MD_CAPI_EXPORT MDStatus md_result_sem_seg_batch(MDResultHandle, size_t i, const unsigned char** labels, size_t* h, size_t* w,
                                 int* num_classes);
MD_CAPI_EXPORT MDStatus md_result_depth_batch(MDResultHandle, size_t i, const float** depth, size_t* h, size_t* w);
/* FaceDet（bbox + score + 关键点） */
MD_CAPI_EXPORT MDStatus md_result_face(MDResultHandle, const MDFaceItem** items, size_t* count);
MD_CAPI_EXPORT MDStatus md_result_face_kps(MDResultHandle, size_t i, const MDPoint** kps, size_t* n);
/* FaceRec（embedding 单列，i 为实例序号） */
MD_CAPI_EXPORT MDStatus md_result_face_embedding(MDResultHandle, size_t i,
                                  const float** embedding, size_t* emb_n);
/* InsightFace 完整分析 */
MD_CAPI_EXPORT MDStatus md_result_insightface(MDResultHandle, const MDInsightFaceItem** items, size_t* count);
MD_CAPI_EXPORT MDStatus md_result_insightface_kps(MDResultHandle, size_t i, const MDPoint** kps, size_t* n);
MD_CAPI_EXPORT MDStatus md_result_insightface_embedding(MDResultHandle, size_t i,
                                         const float** embedding, size_t* emb_n);
MD_CAPI_EXPORT MDStatus md_result_insightface_pose(MDResultHandle, size_t i,
                                    const float** pose, size_t* n);
/* OCR（字符串按行取） */
MD_CAPI_EXPORT MDStatus md_result_ocr(MDResultHandle, size_t i, const int** quad, const char** text, float* score);
/* OCR 批量：返回 batch 内图像数（ResultData<OCRResult> size），逐图行读取复用 md_result_ocr */
MD_CAPI_EXPORT MDStatus md_result_ocr_batch_count(MDResultHandle, size_t* n);
/* OCR 方向分类（cls 子模型结果：label + score） */
MD_CAPI_EXPORT MDStatus md_result_ocr_cls(MDResultHandle, size_t i, int* cls_label, float* cls_score);
/* LPR（plate 单列） */
MD_CAPI_EXPORT MDStatus md_result_lpr(MDResultHandle, const MDLprItem** items, size_t* count);
MD_CAPI_EXPORT MDStatus md_result_plate(MDResultHandle, size_t i, const char** plate, const char** color);
/* 车牌 4 角点（x1,y1,x2,y2,x3,y3,x4,y4，MDPoint 数组） */
MD_CAPI_EXPORT MDStatus md_result_lpr_keypoints(MDResultHandle, size_t i, const MDPoint** kps, size_t* n);
/* 行人属性 */
MD_CAPI_EXPORT MDStatus md_result_attribute(MDResultHandle, const MDAttrItem** items, size_t* count);
MD_CAPI_EXPORT MDStatus md_result_attr_scores(MDResultHandle, size_t i, const float** scores, size_t* n);
/* 年龄 / 性别（单值，0 号索引；批量句柄下读 index 0） */
MD_CAPI_EXPORT MDStatus md_result_age(MDResultHandle, int* age);
MD_CAPI_EXPORT MDStatus md_result_gender(MDResultHandle, int* gender);
/* 年龄 / 性别 批量：平铺 int 数组（每图一个值） */
MD_CAPI_EXPORT MDStatus md_result_age_batch(MDResultHandle, const int** items, size_t* count);
MD_CAPI_EXPORT MDStatus md_result_gender_batch(MDResultHandle, const int** items, size_t* count);
/* ==================== 绘制（对 MDImageHandle 就地绘制） ==================== */

MD_CAPI_EXPORT MDStatus md_draw_rect(MDImageHandle, float x, float y, float w, float h,
                      MDColorRGBA color, float alpha);
MD_CAPI_EXPORT MDStatus md_draw_polygon(MDImageHandle, const float* xs, const float* ys, size_t n,
                         MDColorRGBA color, float alpha);
MD_CAPI_EXPORT MDStatus md_draw_text(MDImageHandle, float x, float y, const char* text,
                      const char* font_path, int font_size, MDColorRGBA color, float alpha);
/* ==================== 结果可视化（直接复用 C++ 的 vis_* 系列） ==================== */

/* 类别名映射：label_id -> 名称 */
typedef struct MDLabelItem {
    int id;
    const char* name;
} MDLabelItem;
/* 绘制选项（与 C++ vis_* 参数一一对应，第三方可完全控制） */
typedef struct MDDrawOptions {
    double threshold;            /* 置信度阈值（默认 0.5） */
    const MDLabelItem* label_map; /* 类别名映射，可为 NULL */
    size_t label_map_size;       /* label_map 条数 */
    const char* font_path;       /* 字体文件路径，可为 NULL */
    int font_size;               /* 默认 14 */
    double alpha;                /* 半透明混合系数（默认 0.15） */
    int save_result;             /* 非 0 保存 vis_result.jpg */
    /* 以下仅对 MD_RES_ATTR 生效（透传 C++ vis_attr 最后两参） */
    const int* abnormal_ids;     /* 异常对象索引列表（命中画红框，否则绿框），可为 NULL */
    size_t abnormal_ids_size;    /* abnormal_ids 条数 */
    int show_attr;               /* 非 0 绘制属性文本（默认 1） */
} MDDrawOptions;
/* 把预测结果就地绘制到图像上（内部调用 C++ vis_det/vis_obb/vis_pose/vis_ocr/...）。
 * 支持的 kind：detection / obb / pose / keypoints / instance_seg / sem_seg / depth /
 *               ocr / lpr / attr / classification；其余返回 MD_ERR_UNSUPPORTED_TYPE。
 * 注意：绘制需在结果句柄存活期间调用（Predict 返回的结果对象持有句柄，绘制前请勿释放）。 */
MD_CAPI_EXPORT MDStatus md_draw_result(MDImageHandle, MDResultHandle, const MDDrawOptions* opt);