rust/modeldeploy/src/ffi.rs


    // 数组式 getter
    pub fn md_result_detection(h: MDResultHandle, items: *mut *const MDDetectionItem, count: *mut usize) -> MDStatus;
    pub fn md_result_classification(h: MDResultHandle, items: *mut *const MDClassifyItem, count: *mut usize) -> MDStatus;
    pub fn md_result_pose(h: MDResultHandle, items: *mut *const MDPoseItem, count: *mut usize) -> MDStatus;
    pub fn md_result_keypoints(h: MDResultHandle, i: usize, kps: *mut *const MDPoint3, n: *mut usize) -> MDStatus;
    pub fn md_result_obb(h: MDResultHandle, items: *mut *const MDObbItem, count: *mut usize) -> MDStatus;
    pub fn md_result_instance_seg(h: MDResultHandle, items: *mut *const MDIsegItem, count: *mut usize) -> MDStatus;
    pub fn md_result_mask(h: MDResultHandle, i: usize, buf: *mut *const u8, out_h: *mut usize, out_w: *mut usize) -> MDStatus;
    pub fn md_result_sem_seg(h: MDResultHandle, labels: *mut *const u8, out_h: *mut usize, out_w: *mut usize, num_classes: *mut c_int) -> MDStatus;
    pub fn md_result_sem_seg_batch(h: MDResultHandle, i: usize, labels: *mut *const u8, out_h: *mut usize, out_w: *mut usize, num_classes: *mut c_int) -> MDStatus;
    pub fn md_result_depth(h: MDResultHandle, depth: *mut *const c_float, out_h: *mut usize, out_w: *mut usize) -> MDStatus;
    pub fn md_result_depth_batch(h: MDResultHandle, i: usize, depth: *mut *const c_float, out_h: *mut usize, out_w: *mut usize) -> MDStatus;
    pub fn md_result_face(h: MDResultHandle, items: *mut *const MDFaceItem, count: *mut usize) -> MDStatus;
    pub fn md_result_face_kps(h: MDResultHandle, i: usize, kps: *mut *const MDPoint, n: *mut usize) -> MDStatus;
    pub fn md_result_face_embedding(h: MDResultHandle, i: usize, emb: *mut *const c_float, n: *mut usize) -> MDStatus;
    pub fn md_result_insightface(h: MDResultHandle, items: *mut *const MDInsightFaceItem, count: *mut usize) -> MDStatus;
    pub fn md_result_insightface_kps(h: MDResultHandle, i: usize, kps: *mut *const MDPoint, n: *mut usize) -> MDStatus;
    pub fn md_result_insightface_embedding(h: MDResultHandle, i: usize, emb: *mut *const c_float, n: *mut usize) -> MDStatus;
    pub fn md_result_insightface_pose(h: MDResultHandle, i: usize, pose: *mut *const c_float, n: *mut usize) -> MDStatus;
    pub fn md_result_ocr(h: MDResultHandle, i: usize, quad: *mut *const c_int, text: *mut *const c_char, score: *mut c_float) -> MDStatus;
    pub fn md_result_ocr_cls(h: MDResultHandle, i: usize, cls_label: *mut c_int, cls_score: *mut c_float) -> MDStatus;
    pub fn md_result_lpr(h: MDResultHandle, items: *mut *const MDLprItem, count: *mut usize) -> MDStatus;
    pub fn md_result_plate(h: MDResultHandle, i: usize, plate: *mut *const c_char, color: *mut *const c_char) -> MDStatus;
    pub fn md_result_lpr_keypoints(h: MDResultHandle, i: usize, kps: *mut *const MDPoint, n: *mut usize) -> MDStatus;
    pub fn md_result_attribute(h: MDResultHandle, items: *mut *const MDAttrItem, count: *mut usize) -> MDStatus;
    pub fn md_result_attr_scores(h: MDResultHandle, i: usize, scores: *mut *const c_float, n: *mut usize) -> MDStatus;
    pub fn md_result_age(h: MDResultHandle, age: *mut c_int) -> MDStatus;
    pub fn md_result_age_batch(h: MDResultHandle, items: *mut *const c_int, count: *mut usize) -> MDStatus;
    pub fn md_result_gender(h: MDResultHandle, gender: *mut c_int) -> MDStatus;
    pub fn md_result_gender_batch(h: MDResultHandle, items: *mut *const c_int, count: *mut usize) -> MDStatus;
    pub fn md_result_ocr_batch_count(h: MDResultHandle, n: *mut usize) -> MDStatus;

    // ── 绘制（基础） ──
    pub fn md_draw_rect(h: MDImageHandle, x: c_float, y: c_float, w: c_float, h: c_float,
        color: MDColorRGBA, alpha: c_float) -> MDStatus;
    pub fn md_draw_polygon(h: MDImageHandle, xs: *const c_float, ys: *const c_float, n: usize,
        color: MDColorRGBA, alpha: c_float) -> MDStatus;
    pub fn md_draw_text(h: MDImageHandle, x: c_float, y: c_float, text: *const c_char,
        font_path: *const c_char, font_size: c_int, color: MDColorRGBA, alpha: c_float) -> MDStatus;

    // ── 结果可视化（句柄直达 C++ vis_*） ──
    pub fn md_draw_result(img: MDImageHandle, result: MDResultHandle, opt: *const MDDrawOptions) -> MDStatus;
}
